--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gujarati Trader</title>
 
-<!-- Meta Pixel Code -->
+<!-- ================= META PIXEL (NEW – SAME AS OLD SETUP) ================= -->
 <script>
 !function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+{if(f.fbq)return;n=f.fbq=function(){
+n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};
 if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
 n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1257167032892703');
-fbq('track', 'PageView');
+s.parentNode.insertBefore(t,s)
+}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');
+
+fbq('init','1257167032892703');
+fbq('track','PageView');
 </script>
+
 <noscript>
-  <img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1257167032892703&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+<img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1257167032892703&ev=PageView&noscript=1"/>
+</noscript>
+<!-- ================= END META PIXEL ================= -->
 
 <style>
 *{box-sizing:border-box}
@@ -144,7 +146,7 @@ line-height:1.5;
   </div>
 
   <a class="join-btn"
-     href="https://t.me/+8I_jmxQJMHI4MjFl"
+     href="https://t.me/+pTP3A6QS-D1mODI1"
      target="_blank"
      onclick="fbq('track','JoinTelegramClick');">
      JOIN OUR TELEGRAM
